fix gap between card of articles

--- a/src/features/ArticlesListing/ui/ArticleListing/articleListing.module.sass
+++ b/src/features/ArticlesListing/ui/ArticleListing/articleListing.module.sass
@@ -1,3 +1,9 @@
 .articleListing
   width: 100%
-  height: 100vh
+  margin-left: -24px
+
+  display: flex
+
+.articleCard
+  margin: 0 24px 48px
+  width: calc(100%/4 - 48px)
