--- a/src/features/ArticlesListing/ui/ArticleListing/components/ListingSkeletons/ListingSkeletons.module.sass
+++ b/src/features/ArticlesListing/ui/ArticleListing/components/ListingSkeletons/ListingSkeletons.module.sass
@@ -3,5 +3,3 @@
 
   display: flex
   flex-wrap: wrap
-
-  margin-left: -24px
